# pepper_colcon_ws

./: .gitignore  How_To_Run.md  LICENSE  README.md  pepper_server.py  requirements.txt
src/: Final_README.md  requirements.txt
src/openai-api-ros2-service/: README.md
src/openai-api-ros2-service/openai_server/: CMakeLists.txt  README.md  package.xml
src/openai-api-ros2-service/openai_server/launch/: openai_server_launch.py
src/openai-api-ros2-service/openai_server/src/: openai_server_node.cpp
src/openai-api-ros2-service/openai_server_interfaces/: CMakeLists.txt  README.md  package.xml
src/openai-api-ros2-service/openai_server_interfaces/srv/: OpenaiServer.srv
src/openai_bridge/: README.md  package.xml  setup.py
src/openai_bridge/launch/: bridge_launch.py
src/openai_bridge/openai_bridge/: transcription_to_openai.py
src/pepper_Ps4/: README.md  package.xml  setup.cfg  setup.py
src/pepper_Ps4/pepper_Ps4/: teleop_ps4.py
src/pepper_audio_receiver/: README.md  package.xml  setup.cfg  setup.py
src/pepper_audio_receiver/pepper_audio_receiver/: audio_receiver.py
src/pepper_audio_transcriber/: README.md  package.xml  setup.cfg  setup.py
src/pepper_audio_transcriber/pepper_audio_transcriber/: whisper_transcriber.py
src/pepper_bringup/: README.md  package.xml  setup.py
src/pepper_bringup/launch/: pepper_bringup.launch.py
src/pepper_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/pepper_dashboard/pepper_dashboard/: pepper_dashboard_server.py
src/pepper_piper_tts/: README.md  package.xml  setup.cfg  setup.py
src/pepper_piper_tts/pepper_piper_tts/: pepper_piper_node.py
src/pepper_teleop/: README.md  package.xml  setup.cfg  setup.py
src/pepper_teleop/pepper_teleop/: teleop_keyboard.py
src/pepper_teleop/pepper_teleop/launch/: teleop.launch.py
src/pepper_vlm/: README.md  package.xml  setup.cfg  setup.py
src/pepper_vlm/pepper_vlm/: pepper_vlm_node.py
