<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openai_bridge</name>
  <version>0.0.0</version>
  <description>ROS 2 package that bridges audio transcriptions to OpenAI services for the Pepper robot.</description>
  <maintainer email="shendge.vishal.vilas@gmail.com">Vishal_Shendge</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python3-ament-package</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>openai_server_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
