<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepper_bringup</name>
  <version>0.0.1</version>
  <description>Launch package that brings up all Pepper robot ROS2 nodes</description>
  <maintainer email="shendge.vishal.vilas@gmail.com">Vishal_Shendge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>pepper_audio_receiver</exec_depend>
  <exec_depend>pepper_audio_transcriber</exec_depend>
  <exec_depend>openai_server</exec_depend>
  <exec_depend>openai_bridge</exec_depend>
  <exec_depend>pepper_vlm</exec_depend>
  <exec_depend>pepper_piper_tts</exec_depend>
  <exec_depend>pepper_dashboard</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
