<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openai_server</name>
  <version>0.0.0</version>
  <description>ROS 2 package providing a server to interact with OpenAI APIs for Pepper robot.</description>
  <maintainer email="shendge.vishal.vilas@gmail.com">Vishal_Shendge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>openai_server_interfaces</depend>
  


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
